Fix the blur effect on safari.

--- a/iou/static/iou/css/iou.css
+++ b/iou/static/iou/css/iou.css
@@ -101,6 +101,7 @@ dialog {
 
 dialog::backdrop {
     backdrop-filter: blur(0.3em);
+    -webkit-backdrop-filter: blur(0.3em);
 }
 
 .dialog--message {
